GITForce/src/objects/DemoReportCard__c.object
<CustomObject>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FatherName__c</fullName>
        <label>FatherName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gsection__c</fullName>
        <label>Gsection</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hindi__c</fullName>
        <label>Hindi</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>StudentName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telugu__c</fullName>
        <label>Telugu</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>English__c  +  Hindi__c  +  Telugu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DemoReportCard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gsection__c</columns>
        <columns>StudentName__c</columns>
        <columns>FatherName__c</columns>
        <columns>Telugu__c</columns>
        <columns>Hindi__c</columns>
        <columns>English__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DemoReportCardNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DemoReportCards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>